--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,12 @@ header {
   background-color: #333;
   color: #fff;
   padding: 20px;
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  gap: 20px;
+  width: 100%;
+  border: #fff 1px solid;
 }
 
 .logo {
@@ -63,6 +69,8 @@ nav li a:hover {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   padding: 20px;
   margin-bottom: 30px;
+  display: flex;
+  
 }
 
 .card h2 {
@@ -95,12 +103,12 @@ footer {
 
 .redes-sociais h2 {
   margin-top: 0;
-  margin-bottom: 10px;
+  margin-bottom: 15px;
 }
 
 .redes-sociais nav {
   display: flex;
-  justify-content: center;
+  justify-content: start;
 }
 
 .redes-sociais a {
