--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+@import url("./cabecalho.css");
+@import url("./conteudo.css");
+@import url("./rodape.css");
+
 /* Estilos Gerais */
 
 body {
@@ -17,13 +21,12 @@ body {
 header {
   background-color: #333;
   color: #fff;
-  padding: 20px;
+  padding: 10px;
   display: flex;
   justify-content: start;
   align-items: center;
   gap: 20px;
   width: 100%;
-  border: #fff 1px solid;
 }
 
 .logo {
@@ -34,6 +37,7 @@ header {
 nav {
   display: inline-block;
   vertical-align: middle;
+  margin-left: auto;
 }
 
 nav ul {
@@ -69,7 +73,7 @@ nav li a:hover {
   box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
   padding: 20px;
   margin-bottom: 30px;
-  display: flex;
+  /* display: flex; */
   
 }
 
@@ -83,21 +87,49 @@ nav li a:hover {
 }
 
 .card img {
-  max-width: 80%;
+  display: block;
+  width: 60%;
   height: auto;
+  margin: 0 auto;
 }
 
 .card figcaption {
-  font-size: 14px;
+  font-size: 20px;
   margin-top: 10px;
+  padding: 10px;
+}
+
+
+
+
+section img {
+  display: block;
+  width: 75%;
+  height: auto;
+  margin: 0 auto;
+}
+
+section h2 {
+  text-align: center;
+  font-size: 50px;
+}
+
+section p {
+  font-size: 20px;
+}
+
+section figcaption {
+  margin-top: 10px;
+  font-size: 20px;
 }
 
 /* Estilos do Rodapé */
 
 footer {
+  width: 100%;
   background-color: #333;
   color: #fff;
-  padding: 20px;
+  padding: 50px;
   margin-top: 50px;
 }
 
@@ -120,3 +152,52 @@ footer {
   max-width: 70px;
   height: auto;
 }
+
+@media (max-width:700px) {
+  header {
+    padding: 10px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: auto;
+  }
+  
+  .logo {
+    display: inline-block;
+    width: 100px;
+  }
+  
+  nav {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: auto;
+  }
+  
+  nav ul {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  nav li {
+    display: inline-block;
+    margin-right: 20px;
+  }
+  
+  nav li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+  }
+  
+  nav li a:hover {
+    color: #f4f4f4;
+  }
+}
+
+
+
+
+
+
+
