--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,7 @@
 @import url("./cabecalho.css");
 @import url("./conteudo.css");
 @import url("./rodape.css");
+@import url("./breakpoint-740.css");
 
 /* Estilos Gerais */
 
@@ -15,189 +16,3 @@ body {
   max-width: 1200px;
   margin: 0 auto;
 }
-
-/* Estilos do Cabeçalho */
-
-header {
-  background-color: #333;
-  color: #fff;
-  padding: 10px;
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  gap: 20px;
-  width: 100%;
-}
-
-.logo {
-  display: inline-block;
-  width: 100px;
-}
-
-nav {
-  display: inline-block;
-  vertical-align: middle;
-  margin-left: auto;
-}
-
-nav ul {
-  list-style: none;
-  margin: 0;
-  padding: 0;
-}
-
-nav li {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-nav li a {
-  color: #fff;
-  text-decoration: none;
-  font-weight: bold;
-}
-
-nav li a:hover {
-  color: #f4f4f4;
-}
-
-/* Estilos da Seção de Conteúdo */
-
-.content {
-  padding: 40px 20px;
-}
-
-.card {
-  background-color: #fff;
-  border-radius: 8px;
-  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.3);
-  padding: 20px;
-  margin-bottom: 30px;
-  /* display: flex; */
-  
-}
-
-.card h2 {
-  font-size: 24px;
-  margin-top: 0;
-}
-
-.card figure {
-  margin: 0;
-}
-
-.card img {
-  display: block;
-  width: 60%;
-  height: auto;
-  margin: 0 auto;
-}
-
-.card figcaption {
-  font-size: 20px;
-  margin-top: 10px;
-  padding: 10px;
-}
-
-
-
-
-section img {
-  display: block;
-  width: 75%;
-  height: auto;
-  margin: 0 auto;
-}
-
-section h2 {
-  text-align: center;
-  font-size: 50px;
-}
-
-section p {
-  font-size: 20px;
-}
-
-section figcaption {
-  margin-top: 10px;
-  font-size: 20px;
-}
-
-/* Estilos do Rodapé */
-
-footer {
-  width: 100%;
-  background-color: #333;
-  color: #fff;
-  padding: 50px;
-  margin-top: 50px;
-}
-
-.redes-sociais h2 {
-  margin-top: 0;
-  margin-bottom: 15px;
-}
-
-.redes-sociais nav {
-  display: flex;
-  justify-content: start;
-}
-
-.redes-sociais a {
-  display: inline-block;
-  margin-right: 20px;
-}
-
-.redes-sociais img {
-  max-width: 70px;
-  height: auto;
-}
-
-@media (max-width:700px) {
-  header {
-    padding: 10px;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: wrap;
-    margin: auto;
-  }
-  
-  .logo {
-    display: inline-block;
-    width: 100px;
-  }
-  
-  nav {
-    display: inline-block;
-    vertical-align: middle;
-    margin-left: auto;
-  }
-  
-  nav ul {
-    list-style: none;
-    margin: 0;
-    padding: 0;
-  }
-  
-  nav li {
-    display: inline-block;
-    margin-right: 20px;
-  }
-  
-  nav li a {
-    color: #fff;
-    text-decoration: none;
-    font-weight: bold;
-  }
-  
-  nav li a:hover {
-    color: #f4f4f4;
-  }
-}
-
-
-
-
-
-
-
